# Tracepy-Fast

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: constants.h  intersection.cpp  intersection.h  ray.cpp  ray.h  trace.cpp  trace.h  transforms.cpp  transforms.h
